--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Bioinformatics</title>
+  <title>Genti Gashi | Bioinformatics</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Genti Gashi</h1>
     <p>Senior Bioinformatics Student | Freelance Researcher</p>
   </header>
 
@@ -31,14 +31,14 @@
     <section>
       <h2>Links</h2>
       <ul>
-        <li><a href="https://github.com/yourhandle" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/Gashiinformatics" target="_blank">GitHub</a></li>
         <li><a href="https://youtube.com/yourchannel" target="_blank">YouTube</a></li>
       </ul>
     </section>
 
     <section>
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>Email: <a href="mailto:ggashi2002@gmail.com">your@email.com</a></p>
       <button onclick="contactClicked()">Click to connect</button>
     </section>
   </main>
