--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Genti Gashi</p>
   </footer>
 
   <script src="script.js"></script>
