--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                     <div class="s-intro__text">
                         <h1 class="s-intro__text-huge animate-on-load">
-                            Augustine
+                            Gashiinformatics
                         </h1>
                         <h3 class="animate-on-load">Digital Designer <span>+</span> Developer</h3>
                     </div>
@@ -556,7 +556,7 @@
                     minima cum consectetur ab repudiandae sed esse dolores.
 
                     <div class="s-footer__buttons">
-                        <a href="mailto:sayhello@augustine.com" class="btn btn--primary u-fullwidth">Say Hello</a>
+                        <a href="mailto:ggashi2002@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
                         <a href="#0" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
@@ -570,8 +570,8 @@
                             Start A Project
                         </h2>
                         <ul class="link-list">
-                            <li><a href="mailto:sayhello@augustine.com">sayhello@augustine.com</a></li>
-                            <li><a href="tel:+1975432345">+197 543 2345</a></li>
+                            <li><a href="mailto:ggashi2002@gmail.com">ggashi2002@gmail.com</a></li>
+                            <li><a href="tel:+13478185269">+13478185269</a></li>
                         </ul>
                     </div>
 
@@ -582,8 +582,7 @@
                         <ul class="link-list">
                             <li><a href="#0">Facebook</a></li>
                             <li><a href="#0">Twitter</a></li>
-                            <li><a href="#0">Github</a></li>
-                            <li><a href="#0">Dribbble</a></li>
+                            <li><a href="https://github.com/Gashiinformatics" target="_blank">GitHub</a></li>
                         </ul>
                     </div>
                     
