--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <div class="column lg-12 s-intro__content">
 
                     <div class="s-intro__text">
-                        <h1 class="s-intro__text-huge animate-on-load">
-                            Gashiinformatics
-                        </h1>
+                        <h2 class="s-intro__text-huge animate-on-load">
+                            Gashi Informatics
+                        </h2>
                         <h3 class="animate-on-load">Digital Designer <span>+</span> Developer</h3>
                     </div>
 
