--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h2 class="s-intro__text-huge animate-on-load">
                             Gashi Informatics
                         </h2>
-                        <h3 class="animate-on-load">Digital Designer <span>+</span> Developer</h3>
+                        <h3 class="animate-on-load">Bioinformatician </h3>
                     </div>
 
                     <div class="s-intro__bg"></div>
