--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         at University at Buffalo. I also earned an associate degree of Biological Sciences from Alfred
                         State College of Technology. My goal is to pursue science at it's fullest extent. I am currently
                         part of the Halfon Lab at Jacobs School of Medicine. Current projects include identifying enhancers 
-                        on different insect genomes, finding motif binding sites, and developing pipelines to make identifaction
+                        on different insect genomes, finding motif binding sites, and developing pipelines to make identification
                         of motifs robust.
                         </p>
                     </div>
