--- a/index.html
+++ b/index.html
@@ -285,8 +285,10 @@
                         <h2 class="text-pretitle">Selected Clients</h2>
     
                         <ul class="clients-list text-huge-title">
-                            <li><a href="#0">Microsoft</a></li>
-                            <li><a href="#0">Amazon</a></li>
+                            <li><a href="#0">University at Buffalo</a></li>
+                            <!-- <li><a href="#0">Jacobs School of Medicine</a></li> -->
+                            <li><a href="https://medicine.buffalo.edu" target="_blank" rel="noopener noreferrer">Jacobs School of Medicine</a></li>
+                            <!--
                             <li><a href="#0">Solana</a></li>
                             <li><a href="#0">Nike</a></li>
                             <li><a href="#0">Adidas</a></li>
@@ -295,6 +297,7 @@
                             <li><a href="#0">Atom</a></li>
                             <li><a href="#0">Square</a></li>
                             <li><a href="#0">Brave</a></li>
+                            -->                        
                         </ul>
     
                     </div>
