--- a/index.html
+++ b/index.html
@@ -555,10 +555,8 @@
 
                 <div class="column lg-5 md-6 stack-on-900 left-block">
                     <p>
-                    Dolorum est et corporis. Unde nobis quo rerum aspernatur cum dolorem 
-                    tempore et. Beatae atque nobis qui nam nulla nihil sunt quis. Earum 
-                    minima cum consectetur ab repudiandae sed esse dolores.
-
+                    I am best reached by email or text, will do my best to get back to you
+                    within 24 hours. Thanks for visiting!
                     <div class="s-footer__buttons">
                         <a href="mailto:ggashi2002@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
                         <a href="#0" class="btn btn--stroke u-fullwidth">Get My CV</a>
