--- a/index.html
+++ b/index.html
@@ -329,20 +329,20 @@
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
-                            <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-kinfolk.jpg" Title="The Kinfolk" data-size="1050x700">
+                            <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-kinfolk.jpg" Title="The Protocol" data-size="1050x700">
                                 <img src="images/portfolio/skaterboy.jpg" 
-                                     srcset="images/portfolio/kinfolk.jpg 1x, images/portfolio/kinfolk@2x.jpg 2x" alt="">
+                                     srcset="images/portfolio/kinfolk.jpg 1x, images/portfolio/kinfolk.jpg 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">Branding</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project Link</a>
+                                <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0311752" title="Project Link" class="project-link">Project Link</a>
                             </div>
-                            <h4 class="folio-item__title">The Kinfolk</h4>
+                            <h4 class="folio-item__title">SCRMshaw Protocol</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>SCRMshaw is an easy to use cis regulatory module finder, which I have used to find enhancers on the <em>Vespula pensylvanica</em> genome</p>
                         </div>
                     </div>
                 </div> <!-- end column -->
