--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
-                            <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-grayscale.jpg" title="Grayscale" data-size="1050x700">
+                            <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-grayscale.jpg" title="Genome annotation" data-size="1050x700">
                                 <img src="images/portfolio/minimalismo.jpg" 
-                                     srcset="images/portfolio/grayscale.jpg 1x, images/portfolio/grayscale@2x.jpg 2x" alt="">
+                                     srcset="images/portfolio/grayscale.jpg 1x, images/portfolio/grayscale.jpg 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
@@ -366,7 +366,7 @@
                         </div>
                     </div>
                 </div> <!-- end column -->
-                <div class="column" data-animate-el>
+                <!-- div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
                             <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-lamp.jpg" title="The Lamp" data-size="1050x700">
@@ -385,7 +385,7 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
                     </div>
-                </div> <!-- end column -->
+                </div> <!-- end column 
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
@@ -407,7 +407,7 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
                     </div>
-                </div> <!-- end column -->
+                </div> <!-- end column 
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
@@ -427,7 +427,7 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
                     </div>
-                </div> <!-- end column -->
+                </div> <!-- end column 
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
@@ -447,6 +447,7 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
                     </div>
+                   --> 
                 </div> <!-- end column -->
     
             </div> <!-- folio-list -->
