--- a/index.html
+++ b/index.html
@@ -67,8 +67,40 @@
                         <li><a href="#colophon" class="smoothscroll">Contact</a></li>
                     </ul>
                 </nav> <!-- end s-header__nav -->
+                
 
                 <ul class="s-header__social">
+            
+                    <li>
+                        <a href="https://github.com/gashiinformatics" target="_blank" rel="noopener noreferrer">
+                            <!-- GitHub SVG -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path>
+                            </svg>
+                            <span class="u-screen-reader-text">GitHub</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/genti-gashi-5a9415282/" target="_blank" rel="noopener noreferrer">
+                            <!-- LinkedIn SVG -->
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);">
+                                <path d="M4.98 3.5c0 1.38-1.11 2.5-2.48 2.5S0 4.88 0 3.5 1.11 1 2.48 1s2.5 1.12 2.5 2.5zM.5 8.5H4.5V24H.5zM7.5 8.5H11V11h.05c.49-.93 1.69-1.91 3.45-1.91 3.69 0 4.5 2.43 4.5 5.59V24h-4v-7.25c0-1.73-.03-3.95-2.41-3.95-2.42 0-2.79 1.89-2.79 3.83V24h-4V8.5z"/>
+                            </svg>
+                            <span class="u-screen-reader-text">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li>
+                    <a href="https://www.youtube.com/@gentigashi5229" target="_blank" rel="noopener noreferrer">
+                            <!-- YouTube SVG -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);">
+                                <path d="M19.615 3.184A4.579 4.579 0 0 0 16.68 2.45C14.35 2.25 12 2.25 12 2.25s-2.35 0-4.68.2a4.579 4.579 0 0 0-2.935.734A4.573 4.573 0 0 0 3.45 5.385C3.25 7.715 3.25 10.065 3.25 10.065s0 2.35.2 4.68a4.579 4.579 0 0 0 .734 2.935 4.573 4.573 0 0 0 2.935.734c2.33.2 4.68.2 4.68.2s2.35 0 4.68-.2a4.579 4.579 0 0 0 2.935-.734 4.573 4.573 0 0 0 .734-2.935c.2-2.33.2-4.68.2-4.68s0-2.35-.2-4.68a4.579 4.579 0 0 0-.734-2.935zM9.75 14.52V7.605L15.5 11.06l-5.75 3.46z"/>
+                            </svg>
+                            <span class="u-screen-reader-text">YouTube</span>
+                        </a>
+                    </li>
+
+
+                <!--
                     <li>
                         <a href="#0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325,1.42-3.592,3.5-3.592 c0.699-0.002,1.399,0.034,2.095,0.107v2.42h-1.435c-1.128,0-1.348,0.538-1.348,1.325v1.735h2.697l-0.35,2.725h-2.348V21H20 c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3z"></path></svg>
@@ -93,6 +125,7 @@
                             <span class="u-screen-reader-text">Dribbble</span>
                         </a>
                     </li>
+                -->
                 </ul>  <!-- end s-header__social -->
 
             </div> <!-- end s-header__nav-wrap -->
