--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     within 24 hours. Thanks for visiting!
                     <div class="s-footer__buttons">
                         <a href="mailto:ggashi2002@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="#0" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="images/MyCV.pdf" class="btn btn--stroke u-fullwidth" target="_blank" rel="noopener noreferrer">Get My CV</a>
                     </div>
 
                     </p>
@@ -616,8 +616,7 @@
                             Connect
                         </h2>
                         <ul class="link-list">
-                            <li><a href="#0">Facebook</a></li>
-                            <li><a href="#0">Twitter</a></li>
+                            <li><a href="https://www.linkedin.com/in/genti-gashi-5a9415282/" target="_blank">Linked In</a></li>
                             <li><a href="https://github.com/Gashiinformatics" target="_blank">GitHub</a></li>
                         </ul>
                     </div>
